--- a/src/main/resources/templates/loginForm.mustache
+++ b/src/main/resources/templates/loginForm.mustache
@@ -10,6 +10,7 @@
     <form action="/login" method="post">
         <input type="text" name="username" placeholder="Enter username">
         <input type="password" name="password" placeholder="Enter password">
+        <button>로그인</button>
     </form>    
 </body>
 </html>
